chore(hero): set hero placeholder background to white

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -16,7 +16,7 @@
         .case-hero .container { max-width: 1920px; margin: 0 80px; display: grid; grid-template-columns: repeat(12, minmax(0, 1fr)); gap: var(--space-20); align-items: center; }
         .case-hero .hero-content { grid-column: span 7; padding: 0; max-width: 870px; text-align: left; }
         .case-hero .hero-media { grid-column: span 5 / -1; display: flex; justify-content: center; align-items: center; }
-        .hero-placeholder { width: 100%; height: 420px; background: var(--color-fire-100); border-radius: 16px; overflow: hidden; display: flex; align-items: center; justify-content: center; }
+        .hero-placeholder { width: 100%; height: 420px; background: var(--color-white); border-radius: 16px; overflow: hidden; display: flex; align-items: center; justify-content: center; }
         .hero-placeholder img { width: 100%; height: 100%; max-width: 100%; max-height: 100%; object-fit: contain; display: block; border-radius: inherit; }
         .launch-badge { display: inline-block; background: var(--color-off-black); color: var(--color-white); padding: 6px 10px; border-radius: 6px; font-size: 14px; font-weight: 700; letter-spacing: 0.02em; margin-bottom: var(--space-24); }
         
