Owner Account: personas layout responsive fixes, caption added, section spacing tightened; IA images and copy updates

--- a/evolve-inbox.html
+++ b/evolve-inbox.html
@@ -579,7 +579,7 @@
         <section class="case-metrics">
             <div class="container">
                 <div class="metrics-left">
-                    <p class="text-body-base-bold">Opportunities we noted</p>
+                    <p class="text-body-base-bold">Opportunities I noted</p>
                     <ul>
                         <li class="text-body-base">Inbox usage dropped 35% during a certain period. We hypothesized that certain owners or guests were disengaged or the interaction didn't require a response. How could we better educate the user that increased owner engagement could increase positive guest reviews?</li>
                         <li class="text-body-base">We didn’t notice a measurable shift in NPS scores around communication, only a 0.5pt increase in a 30-day analysis. We believe it was due to our beta group being relatively small. How could we increase NPS around communication in future iterations?</li>
