--- a/index.html
+++ b/index.html
@@ -84,9 +84,17 @@
                         <h3 class="text-heading-4">Transforming the Owner Journey with a Seamless Experience</h3>
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
-                    <a class="project-card" href="transamerica-app.html">
+                    <a class="project-card" href="evolve-self-serve-cancellations.html">
                         <div class="project-image">
                             <div class="placeholder">Project 3</div>
+                        </div>
+                        <span class="project-badge">Launched</span>
+                        <h3 class="text-heading-4">Reducing Support with Self‑Serve Cancellations</h3>
+                        <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
+                    </a>
+                    <a class="project-card" href="transamerica-app.html">
+                        <div class="project-image">
+                            <div class="placeholder">Project 4</div>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Designing a Mobile App that Empowers Users on their Retirement Journeys</h3>
@@ -94,7 +102,7 @@
                     </a>
                     <a class="project-card" href="transamerica-workplace-experience.html">
                         <div class="project-image">
-                            <div class="placeholder">Project 4</div>
+                            <div class="placeholder">Project 5</div>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Re-imagining a New Responsive Web Experience for Financial Professionals</h3>
@@ -102,7 +110,7 @@
                     </a>
                     <a class="project-card" href="gm-dealer-sales-assistant-app.html">
                         <div class="project-image">
-                            <div class="placeholder">Project 5</div>
+                            <div class="placeholder">Project 6</div>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Designing a Powerful Native Mobile & Tablet Sales Tool Application</h3>
@@ -110,7 +118,7 @@
                     </a>
                     <a class="project-card" href="extra.html">
                         <div class="project-image">
-                            <div class="placeholder">Project 6</div>
+                            <div class="placeholder">Project 7</div>
                         </div>
                         <span class="project-badge">For fun</span>
                         <h3 class="text-heading-4">Side work, Illustrations, Extra Curriculars, and Everything Else</h3>
