Header/nav: add Extra link (desktop + mobile). Remove cancellations work card and renumber placeholders on homepage.

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
                     <!--<li><a href="#home" class="nav-link">Home</a></li>-->
                     <li><a href="#work" class="nav-link">Work</a></li>
                     <li><a href="ai-design.html" class="nav-link">AI + Design</a></li>
+                    <li><a href="extra.html" class="nav-link">Extra</a></li>
                     <li><a href="about.html" class="nav-link">About</a></li>
                 </ul>
             </div>
@@ -35,6 +36,7 @@
         <ul class="mobile-menu-list" role="menu">
             <li role="none"><a role="menuitem" href="#work" class="mobile-menu-link">Work</a></li>
             <li role="none"><a role="menuitem" href="ai-design.html" class="mobile-menu-link">AI + Design</a></li>
+            <li role="none"><a role="menuitem" href="extra.html" class="mobile-menu-link">Extra</a></li>
             <li role="none"><a role="menuitem" href="about.html" class="mobile-menu-link">About</a></li>
         </ul>
     </div>
@@ -84,17 +86,9 @@
                         <h3 class="text-heading-4">Transforming the Owner Journey with a Seamless Experience</h3>
                         <p class="text-body-base">Senior designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
-                    <a class="project-card" href="evolve-self-serve-cancellations.html">
-                        <div class="project-image">
-                            <div class="placeholder">Project 3</div>
-                        </div>
-                        <span class="project-badge">Launched</span>
-                        <h3 class="text-heading-4">Reducing Support with Self‑Serve Cancellations</h3>
-                        <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
-                    </a>
                     <a class="project-card" href="transamerica-app.html">
                         <div class="project-image">
-                            <div class="placeholder">Project 4</div>
+                            <div class="placeholder">Project 3</div>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Designing a Mobile App that Empowers Users on their Retirement Journeys</h3>
@@ -102,7 +96,7 @@
                     </a>
                     <a class="project-card" href="transamerica-workplace-experience.html">
                         <div class="project-image">
-                            <div class="placeholder">Project 5</div>
+                            <div class="placeholder">Project 4</div>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Re-imagining a New Responsive Web Experience for Financial Professionals</h3>
@@ -110,7 +104,7 @@
                     </a>
                     <a class="project-card" href="gm-dealer-sales-assistant-app.html">
                         <div class="project-image">
-                            <div class="placeholder">Project 6</div>
+                            <div class="placeholder">Project 5</div>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Designing a Powerful Native Mobile & Tablet Sales Tool Application</h3>
@@ -118,7 +112,7 @@
                     </a>
                     <a class="project-card" href="extra.html">
                         <div class="project-image">
-                            <div class="placeholder">Project 7</div>
+                            <div class="placeholder">Project 6</div>
                         </div>
                         <span class="project-badge">For fun</span>
                         <h3 class="text-heading-4">Side work, Illustrations, Extra Curriculars, and Everything Else</h3>
