--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                     <h1 class="text-heading-1">你好 (hey)!</h1>
                     <p class="text-body-lg">All right—there’s already a little About section on the homepage, but here’s a bit more 🤓</p>
                     <p class="text-body-lg">I’m a designer who loves creating things that bring both me and my community joy. I enjoy technical problem-solving as much as creative exploration, so lately I’ve been dabbling in AI-powered code editors. I love learning about the story behind every design—and that makes me the type to read every plaque in a museum.</p>
-                    <p class="text-body-lg">Based in Colorado, I split my time between screens and trails—you’ll usually find me climbing, hiking, or biking.</p>
+                    <p class="text-body-lg">Based in Colorado, I split my time between screens and trails—you’ll usually find me traveling, climbing, hiking, or biking.</p>
                 </div>
                 <div class="hero-media" aria-hidden="true">
                     <div class="about-grid">
