--- a/transamerica-workplace-experience.html
+++ b/transamerica-workplace-experience.html
@@ -155,6 +155,7 @@
                 <ul class="nav-menu">
                     <li><a href="index.html#work" class="nav-link">Work</a></li>
                     <li><a href="ai-design.html" class="nav-link">AI + Design</a></li>
+                    <li><a href="extra.html" class="nav-link">Extra</a></li>
                     <li><a href="about.html" class="nav-link">About</a></li>
                 </ul>
             </div>
@@ -166,6 +167,7 @@
         <ul class="mobile-menu-list" role="menu">
             <li role="none"><a role="menuitem" href="index.html#work" class="mobile-menu-link">Work</a></li>
             <li role="none"><a role="menuitem" href="ai-design.html" class="mobile-menu-link">AI + Design</a></li>
+            <li><a href="extra.html" class="nav-link">Extra</a></li>
             <li role="none"><a role="menuitem" href="about.html" class="mobile-menu-link">About</a></li>
         </ul>
     </div>
