Homepage: shrink Inbox card image and set fire-50 background in card frame.

--- a/ai-design.html
+++ b/ai-design.html
@@ -13,6 +13,7 @@
         /* Right-side hero media for AI + Design */
         .ai-hero-media .ai-media-stack { display: flex; flex-direction: column; align-items: center; gap: 20px; width: 100%; max-width: 420px; }
         .ai-hero-media .ai-media-stack img { max-width: 320px; width: 100%; height: auto; border-radius: 16px; box-shadow: var(--shadow-md); }
+        .hero .hero-content h2 { padding-bottom: 16px; }
     </style>
 </head>
 <body>
@@ -51,8 +52,8 @@
                 <div class="hero-content">
                     <h2 class="text-heading-2">AI + Design: My process</h2>
                     <p class="text-body-lg">AI is baked into my process as a creative sidekick—not a replacement for creativity, which will always be uniquely mine. I use tools like ChatGPT, Gemini, Cursor, Figma Make, and V0 to elevate my design process, surface blind spots, and speed up the busy work. It’s a starting point that helps me reframe problems, analyze large data sets, and inspire my team to think more critically. For me, AI is an exciting frontier*—one that’s about building new habits, embracing experimentation, and slowing down to ask better questions. It’s also a powerful tool I incorporate directly into end-user experiences whenever I can**.</p>
-                    <p class="text-body-base ai-note">*I designed my website with Cursor, Github, and Figma.<br><a href="https://github.com/tlainy">Take a look at my Github</a></p>
-                    <p class="text-body-base ai-note">**I’ve placed 1st and 2nd in hackathons by creating innovative solutions powered by AI. <a href="#">Check out my hacks</a></p>
+                    <p class="text-body-lg ai-note">*I designed my website with Cursor, Github, and Figma.<br><a href="https://github.com/tlainy">Take a look at my Github</a></p>
+                    <p class="text-body-lg ai-note">**I’ve placed 1st and 2nd in hackathons by creating user experiences powered by AI. <a href="#">Check out my hacks</a></p>
                 </div>
                 <div class="hero-media ai-hero-media">
                     <div class="ai-media-stack" aria-hidden="true">
