--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
                 <h2 class="text-heading-2">Work</h2>
                 <div class="project-grid">
                     <a class="project-card" href="evolve-inbox.html">
-                        <div class="project-image">
-                            <div class="placeholder">Project 1</div>
+                        <div class="project-image" style="background: #fcede6; display: grid; place-items: center;">
+                            <img src="assets/evolve_inbox_project_thumbnail2.svg" alt="Project thumbnail" style="width: 85%; height: auto; display: block;"/>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Streamlining Owner–Guest Communication with Inbox</h3>
