Owner Account: match hero-media placeholder to Inbox; tighten image section gaps and fix CTA gutters/width on tablet+mobile; add design image sections.

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                         <p class="text-body-base">Lead designer <span style="color: var(--color-grey);">•</span> Evolve</p>
                     </a>
                     <a class="project-card" href="evolve-owner-account.html">
-                        <div class="project-image">
-                            <div class="placeholder">Project 2</div>
+                        <div class="project-image" style="background: #fcede6; display: grid; place-items: center;">
+                            <img src="assets/evolve_oa_thumbnail.png" alt="Project thumbnail" style="width: 100%; height: auto; display: block;"/>
                         </div>
                         <span class="project-badge">Launched</span>
                         <h3 class="text-heading-4">Transforming the Owner Journey with a Seamless Experience</h3>
