--- a/ai-design.html
+++ b/ai-design.html
@@ -41,7 +41,7 @@
         <ul class="mobile-menu-list" role="menu">
             <li role="none"><a role="menuitem" href="index.html#work" class="mobile-menu-link">Work</a></li>
             <li role="none"><a role="menuitem" href="ai-design.html" class="mobile-menu-link">AI + Design</a></li>
-            <li><a href="extra.html" class="nav-link">Extra</a></li>
+            <li role="none"><a role="menuitem" href="extra.html" class="mobile-menu-link">Extra</a></li>
             <li role="none"><a role="menuitem" href="about.html" class="mobile-menu-link">About</a></li>
         </ul>
     </div>
