--- a/evolve-owner-account.html
+++ b/evolve-owner-account.html
@@ -15,8 +15,9 @@
         .case-hero { padding: 120px 20px 80px; min-height: 100vh; background: var(--color-white); display: grid; place-items: center; }
         .case-hero .container { max-width: 1920px; margin: 0 80px; display: grid; grid-template-columns: repeat(12, minmax(0, 1fr)); gap: var(--space-20); align-items: center; }
         .case-hero .hero-content { grid-column: span 7; padding: 0; max-width: 870px; text-align: left; }
-        .case-hero .hero-media { grid-column: span 5 / -1; display: flex; justify-content: center; }
-        .hero-placeholder { width: 100%; height: 420px; background: var(--color-fire-100); border-radius: 16px; }
+        .case-hero .hero-media { grid-column: span 5 / -1; display: flex; justify-content: center; align-items: center; }
+        .hero-placeholder { width: 100%; height: 420px; background: var(--color-white); border-radius: 16px; overflow: hidden; display: flex; align-items: center; justify-content: center; }
+        .hero-placeholder img { width: 100%; height: 100%; max-width: 100%; max-height: 100%; object-fit: contain; display: block; border-radius: inherit; }
         .launch-badge { display: inline-block; background: var(--color-off-black); color: var(--color-white); padding: 6px 10px; border-radius: 6px; font-size: 14px; font-weight: 700; letter-spacing: 0.02em; margin-bottom: var(--space-24); }
         
         /* Overview section: fire-50 background */
@@ -83,11 +84,18 @@
         @media (max-width: 1024px) { .discovery-media .container { margin: 0 var(--space-40); } }
         @media (max-width: 640px) { .discovery-media .container { margin: 0 var(--space-40); } }
 
-        .discovery-images, .solution-images{ padding: var(--space-48) 0 var(--space-64); background: var(--color-white); }
+        /* Halve vertical spacing for stacked image sections */
+        .discovery-images, .solution-images{ padding: var(--space-24) 0 var(--space-32); background: var(--color-white); }
         .discovery-images .container, .solution-images .container { max-width: 1920px; margin: 0 80px; }
+        /* Tighten vertical rhythm between IA image → CTA → Designs → design image */
+        /* Pull CTA upward by half of the discovery section's bottom padding */
+        .discovery-images + .design-cta { margin-top: calc(-1 * var(--space-12)); }
+        .design-cta + .case-metrics { padding-top: var(--space-0); }
+        .case-metrics.design-section + .solution-images,
+        .design-section + .solution-images { padding-top: var(--space-32); }
         @media (max-width: 1024px) { .discovery-images .container, .solution-images .container { margin: 0 var(--space-40); } }
         @media (max-width: 640px) { .discovery-images .container, .solution-images .container { margin: 0 var(--space-40); } }
-        .discovery-image, .solution-image{ margin: 0 0 var(--space-48); }
+        .discovery-image, .solution-image{ margin: 0 0 var(--space-2); }
         .discovery-caption, .solution-caption{ text-align: center; color: var(--color-grey); margin: 0 0 var(--space-12); }
         /* Match evolve-inbox responsive image behavior */
         .discovery-placeholder, .solution-placeholder{ width: 100%; background: transparent; border-radius: 16px; overflow: hidden; }
@@ -131,7 +139,7 @@
         /* Design section */
         .design-section { padding: var(--space-64) 0; background: var(--color-white); }
         .design-section .container { max-width: 1920px; margin: 0 80px; }
-        .design-section h3 { margin: 0 0 var(--space-32); }
+        .design-section h3 { margin: 0 0 var(--space-24); }
         .design-placeholder { width: 100%; height: 520px; background: var(--color-fire-50); border-radius: 16px; }
         .design-stack { display: grid; gap: var(--space-24); }
         .design-cta { display: flex; justify-content: center; margin-top: var(--space-24); }
@@ -216,7 +224,9 @@
                     <h2 class="text-heading-2">Transforming the Owner Journey with a Seamless Owner Account Experience</h2>
                 </div>
                 <div class="hero-media">
-                    <div class="hero-placeholder"></div>
+                    <div class="hero-placeholder">
+                        <img src="assets/evolve_oa_thumbnail.png" alt="Project thumbnail"/ >
+                    </div>
                 </div>
             </div>
         </section>
@@ -253,7 +263,7 @@
                     </div>
                     <div class="detail-section">
                         <h4 class="text-body-large">Timeline</h4>
-                        <p class="text-body-base">Mar 2023 - Jan 2025 reached 1:1 parity</p>
+                        <p class="text-body-base">Nov 2022 - Dec 2024 reached 1:1 parity</p>
                     </div>
                     <div class="detail-section">
                         <h4 class="text-body-large">Platforms & integrations</h4>
@@ -444,7 +454,7 @@
         <section class="discovery-images">
             <div class="container">
                 <div class="discovery-image">
-                    <p class="text-body-base-bold discovery-caption">Information architecture for new web</p>
+                    <p class="text-body-base-bold discovery-caption">A snapshot into the information architecture: for new web</p>
                     <div class="discovery-placeholder">
                         <img src="assets/evolve_oa_web IA.png" alt="OA web IA map" />
                     </div>
@@ -452,15 +462,45 @@
             </div>
         </section>
 
-        <section class="design-section">
+        <div class="discovery-images design-cta">
+            <a class="cta-button text-button" href="https://www.figma.com/board/wELjLypyuvj2YHNDTLWBgd/Evolve--Owner-Account-Web---App-IA?node-id=0-1&t=q4lKVZO08UIlJXRg-1" target="_blank" rel="noopener noreferrer">View IA maps in Figma</a>
+        </div>
+
+        <section class="case-metrics solution-section design-section">
             <div class="container">
-                <h3 class="text-heading-3">Design</h3>
-                <div class="design-stack">
-                    <div class="design-placeholder"></div>
-                    <div class="design-placeholder"></div>
+                <div class="metrics-left">
+                    <h3 class="text-heading-3">Designs</h3>
+                    <p class="text-body-base">To reach parity, I redesigned 19+ features across web and app. All web designs were responsive for desktop, tablet, and mobile breakpoints. Here's a sample of screens:</p>
                 </div>
-                <div class="design-cta">
-                    <a class="cta-button text-button" href="https://www.figma.com/design/p7qJcHUfY1GbPhyYgXoeGK/Evolve--Owner-Account?node-id=1-7&t=chDGnjWziNUuu4mN-1" target="_blank" rel="noopener noreferrer">View my designs in Figma</a>
+                
+            </div>
+        </section>
+
+        <!-- Designs image section -->
+        <section class="solution-images">
+            <div class="container">
+                <div class="solution-image">
+                    <div class="solution-placeholder">
+                        <img src="assets/evolve_oa_collage listings.svg" alt="Owner Account listings collage" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="solution-images">
+            <div class="container">
+                <div class="solution-image">
+                    <div class="solution-placeholder">
+                        <img src="assets/evolve_oa_collage bookings.svg" alt="Owner Account bookings collage" />
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="solution-images">
+            <div class="container">
+                <div class="solution-image">
+                    <div class="solution-placeholder">
+                        <img src="assets/evolve_oa_collage calendar.svg" alt="Owner Account calendar collage" />
+                    </div>
                 </div>
             </div>
         </section>
