Self-Serve Cancellations: add Discovery section; set stats image to 50% centered; double caption gap for section; add matching CTA button styles/responsiveness; center desktop button.

--- a/evolve-owner-account.html
+++ b/evolve-owner-account.html
@@ -245,7 +245,7 @@
                     </div>
                     <div class="content-section">
                         <h3 class="text-heading-3">Solution</h3>
-                        <p class="text-body-base">I partnered with another designer to redesign the Owner Account (OA) on a modern platform with a new design system, refreshed branding, and improved information architecture. I unified web and mobile, prioritized self-serve features, and removed frustrating dead ends. We rolled out iteratively—starting with mobile, where ~56% of users were active—while keeping the legacy platform live to ease adoption. I conducted continuous usability testing with our researcher to ground decisions in data, partnered with content marketing on new guidelines, created a new communication framework, and designed micro-interactions that made the experience feel polished.</p>
+                        <p class="text-body-base">I partnered with another designer to redesign the Owner Account (OA) on a modern platform with a new design system, refreshed branding, and improved information architecture. I unified web and mobile, prioritized self-serve features, and removed frustrating dead ends. We rolled out iteratively—starting with mobile, where ~56% of users were active—while keeping the legacy platform live to ease adoption. I conducted continuous usability testing with our researcher to ground decisions in data, partnered with content marketing on new guidelines, and designed micro-interactions that made the experience feel polished.</p>
                     </div>
                     <div class="content-section">
                         <h3 class="text-heading-3">Impact</h3>
@@ -275,7 +275,6 @@
                             <li class="text-body-base">Full redesign UI, UX, and IA</li>
                             <li class="text-body-base">User persona creation, usability and user research</li>
                             <li class="text-body-base">Flow analysis, internal process audits, competitive analyses</li>
-                            <li class="text-body-base">Communication framework</li>
                             <li class="text-body-base">Product strategy</li>
                         </ul>
                     </div>
